# similarityV

./: .gitignore  README.md  get_vec.sh  load.py  load.sh  main.py  pyproject.toml  tweet_sample.jsonl
